--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -38,3 +38,35 @@ input {
 .fade-enter, .fade-leave-to {
 	opacity: 0;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-item {
+  flex: 1;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-colmun {
+  flex-direction: column;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.flex-center {
+  justify-content: center;
+}
+
+.space-around {
+  justify-content: space-around;
+}
+
+.space-between {
+  justify-content: space-between;
+}
